<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_theme"
        android:icon="@drawable/ic_theme"
        android:title="@string/theme" />
    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/languages" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/feedback_icon"
        android:title="@string/feedback" />
<!--    <item-->
<!--        android:id="@+id/nav_help"-->
<!--        android:icon="@drawable/help"-->
<!--        android:title="@string/help" />-->
<!--    <item-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:icon="@drawable/logout"-->
<!--        android:title="@string/logout" />-->
</menu>