<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/action_bar_settings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/cl_color_primary"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_btn_settings"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:padding="7dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/title_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:fontFamily="@font/roboto_regular"
                    android:padding="7dp"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/very_large_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/themes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="15dp">

                <TextView
                    android:id="@+id/themes_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/theme"
                    android:textColor="@color/black"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/themes_text_pos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="right"
                    android:text="@string/day_mode"
                    android:textColor="@color/cl_color_primary"
                    android:textSize="@dimen/standard_text_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="15dp">

                <TextView
                    android:id="@+id/language_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/languages"
                    android:textColor="@color/black"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/language_text_pos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="right"
                    android:text="@string/uzbek_language"
                    android:textColor="@color/cl_color_primary"
                    android:textSize="@dimen/standard_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
