<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/logout_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/default_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/left_right_margin_size">

        <TextView
            android:id="@+id/message_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/add_category"
            android:textColor="@color/cl_color_primary"
            android:textSize="@dimen/very_large_text_size"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_category"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/cl_color_primary"
                    app:startIconTint="@color/cl_color_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enter_category_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_regular"
                        android:foreground="?selectableItemBackground"
                        android:padding="8dp"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_regular"
                        android:foreground="?selectableItemBackground"
                        android:padding="8dp"
                        android:text="@string/add"
                        android:textColor="@color/cl_color_primary"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</androidx.cardview.widget.CardView>