<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/action_bar_theme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/cl_color_primary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn_theme"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:clipToPadding="true"
                android:padding="7dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/title_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/roboto_regular"
                android:padding="7dp"
                android:text="@string/theme"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/day_mode"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/day_mode_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/left_right_margin_size"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="left|center"
                android:text="@string/day_mode"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size" />

            <ImageView
                android:id="@+id/day_mode_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/large_margin_size"
                android:src="@drawable/ic_selected_mode" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/night_mode"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/night_mode_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/left_right_margin_size"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="left|center"
                android:text="@string/night_mode"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_text_size" />

            <ImageView
                android:id="@+id/night_mode_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/large_margin_size"
                android:src="@drawable/ic_selected_mode"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
